# libp2peasy-plugins

./: .gitignore  Cargo.toml  README.md  build_dist.bat  package-lock.json  package.json  svelte.config.js  wasi_preview1_component_adapter.wasm
.github/workflows/: deploy.yml
docs/: index.html  ipns_plugin_bindings.wasm
docs/_app/: version.json
docs/_app/immutable/assets/: 0.062c48b6.css  0.2b5a7ce2.css  2.7e02c439.css  _layout.bbd85516.css  _page.3a107d24.css
docs/_app/immutable/chunks/: index.ba337af8.js  index.e594e4e1.js  paths.7b6b0190.js  singletons.3918cfa6.js  singletons.4c1971e0.js  singletons.bc112439.js  singletons.c85b14d0.js  singletons.d032edfb.js
docs/_app/immutable/entry/: app.0ca2e73f.js  app.34a73589.js  app.43855954.js  app.6878ea76.js  app.d94afb68.js  start.24d6c00f.js  start.56f9a440.js  start.d36b26ae.js  start.ec933094.js  start.ff207e80.js
docs/_app/immutable/nodes/: 0.705687b5.js  0.a8044233.js  1.15d7abd0.js  1.26e23304.js  1.a54ab6dd.js  1.e1ac7331.js  1.e4652cad.js  2.104212a7.js  2.90f9b31e.js  2.d19b4208.js  3.435aa07d.js  4.7f0e4131.js
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/lib/: index.js
frontend/src/lib/components/: Send.svelte
frontend/src/lib/p2p/: constants.ts
frontend/src/routes/: +page.svelte
plugins/ipns/: README.md
plugins/ipns-wit/: Cargo.toml
plugins/ipns-wit/examples/: mod.rs
plugins/ipns-wit/src/: lib.rs
plugins/ipns-wit/wit/: ipns-pubsub.wit
plugins/ipns/bindings/: Cargo.toml  README.md  build_dist.sh
plugins/ipns/bindings/src/: lib.rs
plugins/ipns/interface/: Cargo.toml  README.md
plugins/ipns/interface/src/: lib.rs
plugins/ipns/rust-api/: Cargo.toml
plugins/ipns/rust-api/src/: lib.rs
plugins/wit-ipns/: Cargo.toml
plugins/wit-ipns/src/: lib.rs
plugins/wit-ipns/wit/: smoke.wit
plugins/zookan/: Cargo.toml  README.md
plugins/zookan/src/: lib.rs
plugins/zookan/tests/: mod.rs
plugins/zookan/wit/: delanocreds.wit
src/: lib.rs
src/lib/: index.js
src/lib/components/: IPNS.svelte  LoadWasm.svelte  Plugin.svelte  Received.svelte  Send.svelte  index.js
src/lib/p2p/: libp2p.ts
src/lib/pluginRunner/: index.js
src/routes/: +page.svelte
src/routes/_wit/: _wip_page.svelte
src/routes/ipns-pubsub/: +page.js
static/: ipns-pubsub.js
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
