[package]
name = "libp2peasy-plugins"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "plugins/ipns/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies.wit-bindgen]
git = "https://github.com/bytecodealliance/wit-bindgen"
version = "0.7.0"

[dependencies]
anyhow = "1.0"

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true               # Enable Link Time Optimization
codegen-units = 1        # allow for maximum size reduction optimizations
strip = true             # Automatically strip symbols from the binary.
panic = 'abort'          # Abort on panic
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
