[package]
name = "wit-ipns"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
getrandom = { version = "0.2.10" }
wit-component = "0.11.0"

[dependencies.wit-bindgen]
workspace = true

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }

[target.wasm32-wasi.dependencies]
getrandom = { version = "0.2.10" }
