[package]
name = "ipns-plugin-interface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"] # has to be a lib to be used elsewhere in Rust code

[dependencies]

serde = { version = "1.0", features = ["derive"] }
ipns-entry = { git = "https://github.com/DougAnderson444/ipns-utils.git" }
libp2p-gossipsub = "0.44.4"
serde_json = "1.0.96"
